# audiobook_generator

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
audiobook_generator/: __init__.py  audio.py  chunking.py  cli.py  pdf_extract.py  pipeline.py  state.py  voices.py
audiobook_generator/tts/: __init__.py  base.py  kokoro_backend.py  piper_backend.py  pyttsx3_backend.py
tests/: conftest.py  test_audio.py  test_chunking.py  test_pdf_extract.py  test_pipeline.py  test_state.py  test_voices_cli_tts.py
