[project]
name = "audiobook-generator"
version = "0.1.0"
description = "Turn a PDF into an audiobook, fully offline, one page at a time, resumable."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pymupdf>=1.24",
    "pysbd>=0.3.4",
    "piper-tts>=1.2.0",
    "onnxruntime>=1.17",
    "pyttsx3>=2.90",
    "requests>=2.31",
]

[project.scripts]
audiobook-generator = "audiobook_generator.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::SyntaxWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audiobook_generator"]
